--- a/ajax_1.html
+++ b/ajax_1.html
@@ -6,7 +6,7 @@
     <title>cargar contenido con ajax</title>
 </head>
 <body>
-    se esta subiendo  o no
+    lo subo
     <script>
         
     </script>
