este es el cuarto por fin

--- a/ajax_1.html
+++ b/ajax_1.html
@@ -6,7 +6,7 @@
     <title>cargar contenido con ajax</title>
 </head>
 <body>
-    lo subo o no
+   llevo media hora para subirlo quiero terminar ya 
     <script>
         
     </script>
