--- a/ajax_1.html
+++ b/ajax_1.html
@@ -6,7 +6,7 @@
     <title>cargar contenido con ajax</title>
 </head>
 <body>
-   llevo media hora para subirlo quiero terminar ya 
+    <p>edit 4</p>    
     <script>
         
     </script>
